<resources>
    <!-- Nombre app -->
    <string name="app_name">Bienestar Uq</string>

    <!--Recuperar Contrasena -->
    <string name="toolbarRecuperarContrasena">Recuperar Contraseña</string>
    <string name="lblRecuperarContrasena">Ingresa la última contraseña que recuerdes haber usado en esta aplicación.</string>
    <string name="txtRecuperarContrasena">Última Contraseña</string>
    <string name="btnRecuperarContrasena">Recuperar</string>


    <!-- Login  -->
    <string name="txtUsuario">Usuario</string>
    <string name="txtContrasena">Contraseña</string>
    <string name="txtIngresar">Ingresar</string>
    <string name="lblTitulo">Bienestar UQ</string>
    <string name="lblDescripcion">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto.</string>
    <string name="txtRegistrarse">Registrarse</string>


    <!-- Registro cliente -->
    <string name="toolbarRegistroCliente">Registrarse</string>
    <string name="txtCedulaRegistroCliente">Cédula</string>
    <string name="txtTipoRegistroCliente">Tipo</string>
    <string name="txtNombresRegistroCliente">Nombres</string>
    <string name="txtApellidosRegistroCliente">Apellidos</string>
    <string name="txtContrasenaRegistroCliente">Contraseña</string>
    <string name="txtRepetirContrasenaRegistroCliente">Repetir Contraseña</string>
    <string name="txtDependenciaRegistroCliente">Dependencia</string>
    <string name="txtTelefonoRegistroCliente">Télefono</string>
    <string name="btnGuardarRegistroCliente">Guardar</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Encargado -->
    <string name="lblCrearEncargado">Crear Encargado</string>
    <string name="toolbarRegistroEncargado">Crear Encargado</string>


    <!-- Servicios -->
    <string name="lblCrearServicio">Crear Servicio</string>
    <string name="txtCodigoRegistrarServicio">Código</string>
    <string name="txtNombreRegistrarServicio">Nombre</string>
    <string name="txtDescripcionRegistrarServicio">Descripcion</string>
    <string name="txtUbicacionRegistrarServicio">Ubicación</string>
    <string name="txtRecursosDisponibles">Recursos</string>
    <string name="txtFechaInicialRegistrarServicio">Fecha Inicio</string>
    <string name="txtFechaFinalRegistrarServicio">Fecha Fin</string>
    <string name="txtTelefonoRegistrarServicio">Fecha Fin</string>
    <string name="btnGuardarRegistrarServicio">Guardar</string>
    <string name="toolbarRegistrarServicio">Crear Servicio</string>


    <!-- Tipo de Servicios -->
    <string name="lblCrearTipoServicio">Crear Tipo Servicio</string>
    <string name="txtCodigoTipoServicio">Código</string>
    <string name="txtNombreTipoServicio">Tipo Servicio</string>
    <string name="btnGuardarTipoServicio">Guardar</string>
    <string name="toolbarTipoServicio">Registro Tipo Servicio</string>



    <string name= "facebook_app_id" > 233963680531025 </string>
    <string name= "fb_login_protocol_scheme" > login_protocol_scheme </string>
    <string name= "share_facebook" > Compartir </string>


    <string name="com.twitter.sdk.android.CONSUMER_KEY">ZFngBR3rvCxzvjJZm67g958xm</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">dUDQIZfTuAUrDLsfh30MZF8jn2yv19TJSrwEiZtiCHevURLvBK</string>

</resources>
