<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearServicio"
    android:orientation="vertical"
    android:background="@drawable/fondo_aplicacion">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbarRegistroCliente"
        android:background="@color/colorverde">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/toolbarRegistrarServicio"
            android:textAlignment="center"
            android:textSize="25dp"

            />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_marginHorizontal="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/txtCodigoRegistrarServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:background="@drawable/fondo_texto"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:hint="@string/txtCodigoRegistrarServicio"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/txtNombreRegistrarServicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/fondo_texto"
                    android:hint="@string/txtNombreRegistrarServicio"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="25dp" />
            </LinearLayout>

        </LinearLayout>


        <EditText
            android:id="@+id/txtDescripcionRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtDescripcionRegistrarServicio"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />


        <EditText
            android:id="@+id/txtUbicacionRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtUbicacionRegistrarServicio"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/txtRecursosDisponiblesRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtRecursosDisponibles"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/txtFechaInicialRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtFechaInicialRegistrarServicio"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/txtFechaFinalRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtFechaFinalRegistrarServicio"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/txtTelefonoRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtTelefonoRegistroCliente"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />


        <Button
            android:id="@+id/btnGuardarRegistrarServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textSize="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/btnGuardarRegistrarServicio"
            android:background="@drawable/fondo_boton"
            android:elevation="40dp"/>


    </LinearLayout>







</LinearLayout>