<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroCliente"
    android:orientation="vertical"
    android:background="@drawable/fondo_aplicacion">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarRegistroCliente"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorverde">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbarRegistroCliente"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/btnCompartir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:background="@color/colorverde"
                    android:onClick="compartirImageFacebook"
                    app:srcCompat="@android:drawable/ic_menu_share" />
            </LinearLayout>

        </LinearLayout>


            <com.facebook.login.widget.LoginButton xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button"
                style="@style/FacebookLoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:icon="@drawable/image_solicitud_servicios"
                android:onClick="compartirContenido"
                android:visibility="invisible"
                facebook:com_facebook_login_text="@string/share_facebook"
                facebook:com_facebook_logout_text="como asi" />





    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_marginHorizontal="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/lblImageRegistrarCliente"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/icono_foto" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/txtCedulaRegistroCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center"
                    android:background="@drawable/fondo_texto"
                    android:gravity="center"
                    android:layout_marginTop="30dp"
                    android:hint="@string/txtCedulaRegistroCliente"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="25dp" />

                <EditText
                    android:id="@+id/txtTipoRegistroCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/fondo_texto"

                    android:hint="@string/txtTipoRegistroCliente"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="25dp" />
            </LinearLayout>

        </LinearLayout>

        <EditText
            android:id="@+id/txtNombresRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtNombresRegistroCliente"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />


        <EditText
            android:id="@+id/txtApellidosRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtApellidosRegistroCliente"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/txtContrasenaRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtContrasenaRegistroCliente"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/txtRepetirContrasenaRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtRepetirContrasenaRegistroCliente"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/txtDependenciaRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtDependenciaRegistroCliente"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <EditText
            android:id="@+id/txtTelefonoRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/fondo_texto"
            android:gravity="center"
            android:hint="@string/txtTelefonoRegistroCliente"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="25dp" />

        <Button
            android:id="@+id/btnGuardarRegistroCliente"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondo_boton"
            android:elevation="40dp"
            android:gravity="center"
            android:onClick="guardarCliente"
            android:text="@string/btnGuardarRegistroCliente"
            android:textColor="@color/white"
            android:textSize="25dp"
            />


    </LinearLayout>

</LinearLayout>