<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecuperarContrasena"
    android:background="@drawable/fondo_aplicacion">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarRecuperarContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorverde">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/toolbarRecuperarContrasena"
            android:textAlignment="center"
            android:textSize="25dp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblRecuperarContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/lblRecuperarContrasena"
                android:textAlignment="gravity"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="40dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/txtRecuperarContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/fondo_texto"
                android:gravity="center"
                android:hint="@string/txtRecuperarContrasena"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="25dp" />

            <Button
                android:id="@+id/btnRecuperarContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/fondo_boton"
                android:elevation="40dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/btnRecuperarContrasena"
                android:textSize="25dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>