<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_login"
    android:orientation="vertical"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="179dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logou" />

            <EditText
                android:id="@+id/txtUsuario"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:autoSizeTextType="uniform"
                android:background="@drawable/fondo_texto"
                android:drawableLeft="@drawable/icon_user"
                android:ems="10"
                android:hint="@string/txtUsuario"
                android:inputType="textPersonName"
                android:textSize="24dp" />

            <EditText
                android:id="@+id/txtContrasena"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/fondo_texto"

                android:drawableLeft="@drawable/icon_contrasena"
                android:ems="10"
                android:hint="@string/txtContrasena"
                android:inputType="textPassword"
                android:textSize="24dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/txtRecuperarContrasena"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignRight="@id/txtContrasena"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:onClick="ventanaRecuperarContrasena"
                    android:text="@string/txtRecuperarContrasena"
                    android:textColor="#606060"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/txtRegistrarse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/txtContrasena"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:gravity="right"
                    android:onClick="ventanaRegistrarse"
                    android:text="@string/txtRegistrarse"
                    android:textColor="#606060"
                    android:textSize="17dp" />
            </LinearLayout>


            <android.support.v7.widget.CardView
                android:layout_width="301dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="53dp"
                app:cardBackgroundColor="#009C42"
                app:cardCornerRadius="25dp"
                app:cardElevation="15dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtIngresar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:onClick="ventanaPrincipal"
                        android:text="Ingresar"
                        android:textColor="#FFFFFF"
                        android:textSize="25dp" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>